# copier-dbt-sql

./: .gitignore  .pre-commit-config.yaml  .release-please-manifest.json  CHANGELOG.md  LICENSE  README.md  copier.yml  justfile  kebab-case.jinja  pyproject.toml  release-please-config.json
.github/: dependabot.yml  pull_request_template.md
.github/workflows/: bump-and-release.yml  label-pr-on-release.yml  pr.yml  release-debug.yml  release-please.yml
template/: .editorconfig  .gitignore.jinja  .pre-commit-config.yaml.jinja  README.md.jinja  databricks.yml.jinja  dbt_project.yml.jinja  justfile.jinja  packages.yml.jinja  profile_template.yml.jinja  pyproject.toml.jinja  release-please-config.json
template/.databricks/: .databricks.env
template/.github/: dependabot.yml.jinja  pull_request_template.md
template/.github/actions/changed-files-to-nul/: action.yml.jinja
template/.github/actions/common-setup/: action.yml.jinja
template/.github/workflows/: _deploy-reusable.yml.jinja  bump-and-release.yml  copier-update.yml.jinja  deploy-release.yml.jinja  pr.yml.jinja  release-please.yml  release-please.yml.jinja
template/[[project_name_kecab_case]]/: [[_copier_conf.answers_file]].jinja  databricks.yml.jinja  dbt_project.yml.jinja  pyproject.toml.jinja
template/[[project_name_kecab_case]]/.github/workflows/: bump-and-release.yml
template/ci_cd/: profiles.yml  profiles.yml.jinja
template/resources/: [[project_name]]_sql.job.yml.jinja
template/src/macros/dbt_overrides/: _dbt_overrides_macros.yml  generate_schema_name.sql.jinja
template/src/macros/overrides/: _overrides_macros.yml  generate_schema_name.sql
template/src/macros/standard/: _standard_macros.yml  log_project_version.sql
template/src/models/: _groups.yml.jinja
template/src/models/[% if with_automate_dv %]raw_vault[% endif %]/hubs/: _hubs_schema.yml
template/src/models/[% if with_automate_dv %]raw_vault[% endif %]/links/: _links_schema.yml
template/src/models/[% if with_automate_dv %]raw_vault[% endif %]/sats/: _sats_schema.yml
template/{{project_name_kecab_case}}/: .gitignore  .pre-commit-config.yaml.jinja  README.md.jinja  databricks.yml.jinja  dbt_project.yml.jinja  packages.yml.jinja  pyproject.toml.jinja  {{_copier_conf.answers_file}}.jinja
template/{{project_name_kecab_case}}/.github/: dependabot.yml.jinja
template/{{project_name_kecab_case}}/resources/: {{project_name}}_sql.job.yml.jinja
tests/: README.md  conftest.py  test_kebab_project_name.py  test_template.py
