[build-system]  # https://docs.astral.sh/uv/concepts/build-backend/
requires = ["uv_build>=0.9.18,<0.10.0"]
build-backend = "uv_build"

[project]  # https://packaging.python.org/en/latest/specifications/pyproject-toml/
name = "copier-dbt-sql"
version = "0.24.0"
description = "A Copier template for scaffolding dbt SQL projects targeting Databricks."
readme = "README.md"
requires-python = ">=3.11,<4.0"
dependencies = [
]

[dependency-groups]  # https://docs.astral.sh/uv/concepts/projects/dependencies/#development-dependencies
dev = [
  "commitizen>=4.3.0,<5.0.0",
  "copier>=9.11.3",
  "pre-commit>=4.5.0, <5.0.0",
  "pytest>=9.0.2",
  "pytest-copie>=0.3.1",
  "pytest-json-ctrf>=0.3.6",
  "ruff>=0.14.0,<1.0.0",
]

# --- Ruff Configuration ---
[tool.ruff]  # https://docs.astral.sh/ruff/settings/
src = ["src", "tests"]
target-version = "py311"

[tool.ruff.format]  # https://docs.astral.sh/ruff/settings/#format
docstring-code-format = true

[tool.ruff.lint]  # https://docs.astral.sh/ruff/settings/#lint
ignore = [
    "D100", # Missing docstring in public module (annoying for notebooks)
    "D104", # Missing docstring in public package
    "PLR0913", # Too many arguments in function (common in Spark/dbt wrappers)
]

[tool.ruff.lint.isort]  # https://docs.astral.sh/ruff/settings/#lintisort
# Ensure Spark-related imports are grouped together
known-first-party = ["pyspark", "delta"]

[tool.ruff.lint.pycodestyle]  # https://docs.astral.sh/ruff/settings/#lintpycodestyle
max-doc-length = 100

# --- Commitizen Configuration ---
[tool.commitizen]  # https://commitizen-tools.github.io/commitizen/config/configuration_file/
version_provider = "uv"
tag_format = "${version}"
version_files = [
  "pyproject.toml:version",
]

# --- Pytest Configuration ---
[tool.pytest] # https://docs.pytest.org/en/stable/reference/reference.html#configuration-options
minversion = "9.0"
testpaths = [
  "tests",
]
filterwarnings = [
  # Ignore Copier's "dirty template" warning during tests
  "ignore::copier.errors.DirtyLocalWarning",
]
